# balg

./: README.md  boolean.py  expression.py  logic_diagram  main.py  pyREADME.md  pyREADME1.md  pyproject.toml  requirements.txt  synthesizer.py  test.py
src/: expression.py
src/balg/: boolean.py  expression.py
